<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CatchGramPOC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pick_image">Pick Image</string>
    <string name="pick_video">Pick Video</string>
    <string name="note">Note: Attach randomly generated code to bottom of image/video</string>
    <string name="title_activity_image_processing">Image Processing</string>
    <string name="generate_and_attach_code">Generate &amp; Attach Code</string>
    <string name="source_image">Source Image</string>
    <string name="preview_image">Preview Image</string>

</resources>
